--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest"
   },
-  "author": "João Leonardo",
+  "author": "Guilherme vaz",
   "license": "ISC",
   "devDependencies": {
     "jest": "^29.5.0"
