--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "teste unitarios com jest",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "backend": "json-server --watch db/db.json"
   },
   "author": "Guilherme vaz",
   "license": "ISC",
   "devDependencies": {
     "jest": "^29.5.0"
+  },
+  "dependencies": {
+    "json-server": "^0.17.3"
   }
 }
